--- a/es-page-processor/pom.xml
+++ b/es-page-processor/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>joojle</artifactId>
         <groupId>ir.jimbo</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
     <properties>
         <embeddedElastic.version>2.10.0</embeddedElastic.version>
