--- a/fasttext/pom.xml
+++ b/fasttext/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <artifactId>joojle</artifactId>
     <groupId>ir.jimbo</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
   </parent>
   <artifactId>fasttext</artifactId>
   <properties>
