--- a/search-api/pom.xml
+++ b/search-api/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <artifactId>joojle</artifactId>
     <groupId>ir.jimbo</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>search-api</artifactId>
