--- a/train_data/pom.xml
+++ b/train_data/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>joojle</artifactId>
     <groupId>ir.jimbo</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <description>""</description>
